Create Login Page

--- a/login.html
+++ b/login.html
@@ -1,11 +1,45 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="login.css">
     <title>Welcome to the postIt! Please Log In</title>
 </head>
-<body>
 
+<body>
+    <section class="wrapper">
+        <div class="content">
+
+            <header>
+                <div class="image-container">
+                    <img src="http://assets.stickpng.com/thumbs/5b06c181fad1cae04539afdd.png">
+                </div>
+                <div class="welcome-container">
+                    <h1>Welcome to postIt!</h1>
+                    <h3>Please Login!</h3>
+                </div>
+            </header>
+
+            <section>
+                <form class="login-form">
+                    <div class="input-group">
+                        <input type="email" placeholder="Email" id="email">
+                        <input type="password" placeholder="Password" id="password">
+                    </div>
+                    <div class="btn-group">
+                        <button><a id="btn-text" href="index.html">Log In</a></button>
+                        <button><a id="btn-text" href="index.html">Sign Up</a></button>
+                    </div>
+                </form>
+            </section>
+
+            <footer>
+                <a href="index.html" title="Forgot Password">Forgot Password?</a>
+            </footer>
+
+        </div>
+    </section>
 </body>
+
 </html>
