--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
             <header>
                 <div class="image-container">
-                    <img src="http://assets.stickpng.com/thumbs/5b06c181fad1cae04539afdd.png">
+                    <img src="note.png">
                 </div>
                 <div class="welcome-container">
                     <h1>Welcome to postIt!</h1>
@@ -28,14 +28,14 @@
                         <input type="password" placeholder="Password" id="password">
                     </div>
                     <div class="btn-group">
-                        <button><a id="btn-text" href="index.html">Log In</a></button>
-                        <button><a id="btn-text" href="index.html">Sign Up</a></button>
+                        <a href="index.html"><input type="button" value="Log In"></a>
+                        <a href="index.html"><input type="button" value="Sign up"></a>
                     </div>
                 </form>
             </section>
 
             <footer>
-                <a href="index.html" title="Forgot Password">Forgot Password?</a>
+                <a id="footer-link-pswrd" href="index.html" title="Forgot Password">Forgot Password?</a>
             </footer>
 
         </div>
