--- a/login.html
+++ b/login.html
@@ -22,13 +22,13 @@
             </header>
 
             <section>
-                <form class="login-form">
+                <form class="login-form" action="index.html">
                     <div class="input-group">
                         <input type="email" placeholder="Email" id="email">
                         <input type="password" placeholder="Password" id="password">
                     </div>
                     <div class="btn-group">
-                        <a href="index.html"><input type="button" value="Log In"></a>
+                        <a href="index.html"><input type="submit" value="Log In"></a>
                         <a href="index.html"><input type="button" value="Sign up"></a>
                     </div>
                 </form>
