Added gitignore and login form fields required

--- a/login.html
+++ b/login.html
@@ -24,8 +24,8 @@
             <section>
                 <form class="login-form" action="index.html">
                     <div class="input-group">
-                        <input type="email" placeholder="Email" id="email">
-                        <input type="password" placeholder="Password" id="password">
+                        <input type="email" placeholder="Email" id="email" required>
+                        <input type="password" placeholder="Password" id="password" required>
                     </div>
                     <div class="btn-group">
                         <a href="index.html"><input type="submit" value="Log In"></a>
