--- a/index.html
+++ b/index.html
@@ -6,6 +6,16 @@
     <title>Homework#1</title>
 </head>
 <body>
+<header>
+    <nav>
+        <div>
+            <img src="note.png" alt="logo">
+        </div>
 
+        <div class="logo" >
+            <img class="logo" src="21294.png" alt="icon">
+        </div>
+    </nav>
+</header>
 </body>
 </html>
