New bar. Middle column. Icons. Search box - Karl

--- a/index.html
+++ b/index.html
@@ -3,19 +3,41 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
-    <title>Homework#1</title>
+    <title>Title</title>
 </head>
 <body>
-<header>
-    <nav>
-        <div>
-            <img src="note.png" alt="logo">
+<div class="wrapper">
+    <header>
+        <img class="logo" src="note.png" alt="logo">
+        <div class="search-container">
+            <form action="index.html">
+                <label>
+                    <input class="search" type="text" placeholder="">
+                </label>
+                <button type="submit">Search</button>
+            </form>
         </div>
 
-        <div class="logo" >
-            <img class="logo" src="21294.png" alt="icon">
-        </div>
-    </nav>
-</header>
+        <img class="profile" src="21294.png" alt="profile">
+    </header>
+
+</div>
+<div class="feed-container">
+    <div class="feed-noneneed">
+
+    </div>
+</div>
+
+<div class="feed-wrapper">
+
+
+</div>
+<div class="feed-noneneed">
+
+
+</div>
+
+
+
 </body>
 </html>
