--- a/index.html
+++ b/index.html
@@ -3,9 +3,12 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="index.css">
-    <title>Homework#1</title>
+    <title>postIt</title>
 </head>
 <body>
-
+    <main>
+        <div style="height: 100px"></div>
+    </main>
+    <script type="module" src="res/js/index.js"></script>
 </body>
 </html>
