Fixed nav. fixed search box.

--- a/index.html
+++ b/index.html
@@ -10,9 +10,9 @@
     <header>
         <img class="logo" src="note.png" alt="logo">
         <div class="search-container">
-            <form action="index.html">
+            <form action="" >
                 <label>
-                    <input class="search" type="text" placeholder="">
+                    <input class="search-container" type="text" placeholder="">
                 </label>
                 <button type="submit">Search</button>
             </form>
