--- a/login.html
+++ b/login.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <link rel="stylesheet" href="login.css">
+    <link rel="stylesheet" href="res/css/login.css">
     <title>Welcome to the postIt! Please Log In</title>
 </head>
 
@@ -13,7 +13,7 @@
 
             <header>
                 <div class="image-container">
-                    <img src="note.png" alt="">
+                    <img src="res/media/note.png" alt="">
                 </div>
                 <div class="welcome-container">
                     <h1>Welcome to postIt!</h1>
