merged. moved files to media.

--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body>
 <div class="wrapper">
     <header>
-        <img class="logo" src="note.png" alt="logo">
+        <img class="logo" src="res/media/note.png" alt="logo">
         <div class="search-container">
             <form action="" >
                 <label>
@@ -19,26 +19,10 @@
             </form>
         </div>
 
-        <img class="profile" src="21294.png" alt="profile">
+        <img class="profile" src="res/media/profile.png" alt="profile">
     </header>
 
 </div>
-<div class="feed-container">
-    <div class="feed-noneneed">
-
-    </div>
-</div>
-
-<div class="feed-wrapper">
-
-
-</div>
-<div class="feed-noneneed">
-
-
-</div>
-
-
 
     <main>
         <div style="height: 100px"></div>
