--- a/login.html
+++ b/login.html
@@ -13,7 +13,7 @@
 
             <header>
                 <div class="image-container">
-                    <img src="note.png" alt="">
+                    <img src="res/media/note.png" alt="">
                 </div>
                 <div class="welcome-container">
                     <h1>Welcome to postIt!</h1>
