Made changes in html and css.

--- a/index.html
+++ b/index.html
@@ -7,26 +7,23 @@
     <title>postIt</title>
 </head>
 <body>
-<div class="wrapper">
-    <header>
-        <img class="logo" src="res/media/note.png" alt="logo">
-        <div class="search-container">
-            <form action="" >
-                <label>
-                    <input class="search-container" type="text" placeholder="">
-                </label>
-                <button type="submit">Search</button>
-            </form>
-        </div>
 
-        <img class="profile" src="res/media/profile.png" alt="profile">
-    </header>
+<header>
+    <img class="img-logo" src="res/media/note.png" alt="logo">
+    <div class="search-container">
+        <form action="">
+            <label>
+                <input class="search-container" type="text" placeholder="">
+            </label>
+            <button type="submit">Search</button>
+        </form>
+    </div>
+    <img class="img-profile" src="res/media/profile.png" alt="profile">
+</header>
 
-</div>
-
-    <main>
-        <div style="height: 100px"></div>
-    </main>
-    <script type="module" src="res/js/index.js"></script>
+<main>
+    <div style="height: 100px"></div>
+</main>
+<script type="module" src="res/js/index.js"></script>
 </body>
 </html>
