ok. ready to merge

--- a/index.html
+++ b/index.html
@@ -3,12 +3,27 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="res/css/index.css">
+
     <title>postIt</title>
 </head>
 <body>
-    <main>
-        <div style="height: 100px"></div>
-    </main>
+
+<header>
+    <img class="img-logo" src="res/media/note.png" alt="logo">
+    <div class="search-container">
+        <form action="">
+            <label>
+                <input class="search-container" type="text" placeholder="">
+            </label>
+            <button type="submit">Search</button>
+        </form>
+    </div>
+    <img class="img-profile" src="res/media/profile.png" alt="profile">
+</header>
+
+<main>
     <script type="module" src="res/js/index.js"></script>
+</main>
+
 </body>
 </html>
