--- a/login.html
+++ b/login.html
@@ -4,6 +4,10 @@
 <head>
     <meta charset="UTF-8">
     <link rel="stylesheet" href="res/css/login.css">
+    <meta name="viewport">
+
+    <script type="module" src="res/js/scaler.js"></script>
+
     <title>Welcome to the postIt! Please Log In</title>
 </head>
 
