Added requirement comments + style changes

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <header>
     <img class="img-logo" src="res/media/note.png" alt="logo">
     <div class="search-container">
-        <form action="">
+        <form action="login.html">
             <label>
                 <input class="search-container" type="text" placeholder="">
             </label>
