--- a/browse.html
+++ b/browse.html
@@ -4,12 +4,12 @@
     <meta charset="UTF-8">
     <meta name="viewport">
     <link rel="stylesheet" href="res/css/main.css">
-    <link rel="stylesheet" href="res/css/index.css">
+    <link rel="stylesheet" href="res/css/browse.css">
 
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script type="module" src="res/js/scaler.js"></script>
     <script type="module" src="res/js/dropdown.js"></script>
-    <script type="module" src="res/js/index.js"></script>
+    <script type="module" src="res/js/browse.js"></script>
 
     <title>postIt</title>
 </head>
